# py-inversion-list

./: .gitmodules  LICENSE  README.rst  build.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-package.yml
arithmetic/: __init__.py  __init__.pyi  c_arithmetic.pxd
docs/: api.rst  conf.py  index.rst
inversion-list/: __init__.py  __init__.pyi  _inversion-list.py  _inversion-list.pyx  c_inversion-list.pxd
tests/: testInversionList.py  test_InversionList.py  test_arithmetic.py
