[build-system]
    requires = [
      "poetry-core>=1.0.0",
      "Cython>=0.29,<3.0",
      "setuptools~=67.6.0",
    ]
    build-backend = "poetry.core.masonry.api"

[tool.poetry]
    name = "py-arithmetic"
    version = "0.1.0"
    description = "A sample cython wrapper"
    authors = ["Christophe Demko <chdemko@gmail.com>"]
    license = "BSD-3-Clause"
    readme = "README.rst"
    packages = [{ include = "arithmetic" }]
    exclude = [
        "arithmetic/**/*.so",
        "arithmetic/**/*.pxd",
        "arithmetic/**/*.c",
        "arithmetic/**/*.pyx",
        "arithmetic/c-arithmetic",
    ]
    include = [
        { path = "arithmetic/**/*.so", format = "wheel" },
        { path = "arithmetic/**/*.pxd", format = "sdist" },
        { path = "arithmetic/**/*.pyx", format = "sdist" },
        { path = "arithmetic/c-arithmetic/**/*", format = "sdist" },
    ]

[tool.poetry.build]
    generate-setup-file = false
    script = "build.py"

[tool.poetry.dependencies]
    python = "^3.10"

[tool.poetry.group.dev.dependencies]
    tox = "^4.4.6"

    # Formatter
    black = {extras = ["jupyter"], version = "^23.1.0"}

    # Tests
    pytest = "^7.2.2"
    pytest-cov = "^4.0.0"
    ipython = "^8.11.0"

    # Style checkers
    doc8 = "^0.11.2"
    mypy = "^1.1.1"
    flake8 = "^6.0.0"
    flake8-annotations-complexity = "^0.0.7"
    flake8-black = "^0.3.6"
    flake8-blind-except = "^0.2.1"
    flake8-bugbear = "^23.2.13"
    flake8-builtins = "^2.1.0"
    flake8-cognitive-complexity = "^0.1.0"
    flake8-comprehensions = "^3.10.1"
    flake8-docstrings = "^1.7.0"
    flake8-expression-complexity = "^0.0.11"
    flake8-fixme = "^1.1.1"
    flake8-functions = "^0.0.7"
    flake8-import-order = "^0.18.2"
    flake8-mypy = "^17.8.0"
    flake8-pyi = "^23.1.2"
    flake8-pydocstyle = "^0.2.2"
    flake8-return = "^1.2.0"
    flake8-simplify = "^0.19.3"
    flake8-spellcheck = "^0.28.0"
    flake8-use-fstring = "^1.4"
    flake8-variables-names = "^0.0.5"
    pep8-naming = "^0.13.3"
    pylint = {version = "^2.17.0", python = ">=3.9"}
    ruff = "^0.0.254"
    darglint = "^1.8.1"

[tool.poetry.group.docs]
    optional = true

[tool.poetry.group.docs.dependencies]
    Sphinx = {version = "^6.1.3", python = ">=3.9"}
    sphinx-rtd-theme = "^1.2.0"

[tool.mypy]
exclude = ["arithmetic/c-arithmetic"]
